--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <!-- ==== Backlog Content ==== -->
                 <div id="backlog-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="backlog-list">
+                    <ul class="drag-item-list" id="backlog-list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(0)">
 
                     </ul>
                 </div>
@@ -51,7 +51,7 @@
 
                 <!-- ==== Progress Content ==== -->
                 <div id="progress-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="progress-list">
+                    <ul class="drag-item-list" id="progress-list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(1)">
 
                     </ul>
                 </div>
@@ -80,7 +80,7 @@
 
                 <!-- ==== Complete Content ==== -->
                 <div id="complete-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="complete-list">
+                    <ul class="drag-item-list" id="complete-list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(2)">
 
                     </ul>
                 </div>
@@ -109,7 +109,7 @@
 
                 <!-- ==== On Hold Content ==== -->
                 <div id="on-hold-content" class="custom-scroll">
-                    <ul class="drag-item-list" id="on-hold-list">
+                    <ul class="drag-item-list" id="on-hold-list" ondrop="drop(event)" ondragover="allowDrop(event)" ondragenter="dragEnter(3)">
 
                     </ul>
                 </div>
